--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">GitFlowG2</string>
+    <string name="area_del_circulo">Area del circulo</string>
+    <string name="ingrese_el_radio_del_circulo">Ingrese el radio del circulo</string>
+    <string name="calcular_rea">Calcular área</string>
 </resources>
