--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">GitFlowG2</string>
+    <string name="Digite_el_valor_del_lado">Digite el valor del lado</string>
+    <string name="Calcular">Calcular</string>
+    <string name="Lado">Lado</string>
 </resources>
