--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">GitFlowG2</string>
+    <string name="tiutulo">Diametro del circulo</string>
+    <string name="app_name2">Areas y perimetros</string>
+    <string name="calcular">Calcular</string>
+    <string name="r_diame">El diametro es: </string>
+    <string name="radio">Radio</string>
+
 </resources>
