--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">GitFlowG2</string>
+    <string name="base_triangulo">Base</string>
+    <string name="altura_triangulo">Altura</string>
+    <string name="calculo_area_triangulo">Calcular</string>
 </resources>
